Add a custom column from the packet details popup menu. This fixes bug 4246.

svn path=/trunk/; revision=31020